Fixed Overflow. Finalised main body div.

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -123,4 +123,6 @@ nav{
   #main {
     transition: margin-left .5s;
     padding-left: 11.5%;
+    width:88%;
+    word-wrap: break-word;
   }
