--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,5 +48,8 @@ header{
 }
 body{
     margin: 0px;
+    max-width: 100%;
+    overflow-x: hidden;
+
     font-family:"Arial", Helvetica Neue, Helvetica;
 }
